# Hackathon2

./: .gitignore  README.md  pyproject.toml
.specify/memory/: constitution.md
history/prompts/cli-todo-app/: 002-create-specification.spec.prompt.md  003-clarify-specification.spec.prompt.md  004-create-implementation-plan.plan.prompt.md  005-generate-tasks.tasks.prompt.md  006-execute-implementation.green.prompt.md
history/prompts/constitution/: 001-create-project-constitution.constitution.prompt.md
specs/001-cli-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/history/: 001_initial_requirements.md
specs/history/checklists/: requirements.md
src/: cli.py  main.py  models.py  todo_manager.py
tests/: test_cli.py  test_main.py  test_models.py  test_todo_manager.py
